module8/practice-http-server-to-k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - env:
            - name: Version
              valueFrom:
                configMapKeyRef:
                  key: Version
                  name: httpserver
          name: httpserver
          image: jwang10/cncamp-http-server:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              ### this probe will fail with 404 error code
              ### only httpcode between 200-400 is retreated as success
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              httpHeaders:
                - name: cncamp
                  value: J
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
#            postStart:
#              exec:
#                command: [ "/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message" ]
            preStop:
              exec:
                command: [ "/bin/sh","-c","while killall http-server; do sleep 1; done" ]
          resources:
            limits:
              memory: "200Mi"
            requests:
              memory: "100Mi"
              cpu: 0.5
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
