module8/practice-http-server-to-k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpserver
